@@ -1,20 +1,3 @@
-/* 
- * RealmSpeak is the Java application for playing the board game Magic Realm.
- * Copyright (c) 2005-2015 Robin Warren
- * E-mail: robin@dewkid.com
- * 
- * This program is free software: you can redistribute it and/or modify it under the terms of the
- * GNU General Public License as published by the Free Software Foundation, either version 3 of the License,
- * or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
- * implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
- * for more details.
- * 
- * You should have received a copy of the GNU General Public License along with this program. If not, see
- *
- * http://www.gnu.org/licenses/
- */
 package com.robin.game.GameBuilder;
 
 import java.util.ArrayList;
@@ -35,9 +18,9 @@ public class GameObjectTableModel extends AbstractTableModel implements ColumnSi
 		"Holds"
 	};
 	
-	protected ArrayList data;
+	protected ArrayList<GameObject> data;
 
-	public GameObjectTableModel(ArrayList data) {
+	public GameObjectTableModel(ArrayList<GameObject> data) {
 		this.data = data;
 	}
 	public int getRowCount() {
@@ -61,17 +44,17 @@ public class GameObjectTableModel extends AbstractTableModel implements ColumnSi
 	}
 	public Object getValueAt(int row,int col) {
 		if (row<data.size()) {
-			GameObject obj = (GameObject)data.get(row);
+			GameObject obj = data.get(row);
 			switch(col) {
 				case 0:
-					return new Long(obj.getId());
+					return Long.valueOf(obj.getId());
 				case 1:
 					return obj.getName();
 				case 2:
 					GameObject hb = obj.getHeldBy();
 					return hb==null?"":hb.toString();
 				case 3:
-					return new Integer(obj.getHoldCount());
+					return Integer.valueOf(obj.getHoldCount());
 				default:
 					throw new IllegalArgumentException("Invalid column index");
 			}
