@@ -1,20 +1,3 @@
-/* 
- * RealmSpeak is the Java application for playing the board game Magic Realm.
- * Copyright (c) 2005-2015 Robin Warren
- * E-mail: robin@dewkid.com
- * 
- * This program is free software: you can redistribute it and/or modify it under the terms of the
- * GNU General Public License as published by the Free Software Foundation, either version 3 of the License,
- * or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
- * implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
- * for more details.
- * 
- * You should have received a copy of the GNU General Public License along with this program. If not, see
- *
- * http://www.gnu.org/licenses/
- */
 package com.robin.game.GameBuilder;
 
 import java.util.*;
@@ -31,9 +14,9 @@ public class GameSetupTableModel extends AbstractTableModel implements ColumnSiz
 		"Cmds"
 	};
 	
-	protected ArrayList data;
+	protected ArrayList<GameSetup> data;
 
-	public GameSetupTableModel(ArrayList data) {
+	public GameSetupTableModel(ArrayList<GameSetup> data) {
 		this.data = data;
 	}
 	public int getRowCount() {
@@ -50,12 +33,12 @@ public class GameSetupTableModel extends AbstractTableModel implements ColumnSiz
 	}
 	public Object getValueAt(int row,int col) {
 		if (row<data.size()) {
-			GameSetup setup = (GameSetup)data.get(row);
+			GameSetup setup = data.get(row);
 			switch(col) {
 				case 0:
 					return setup.getName();
 				case 1:
-					return new Integer(setup.getCommandCount());
+					return Integer.valueOf(setup.getCommandCount());
 				default:
 					throw new IllegalArgumentException("Invalid column index");
 			}
