@@ -1,20 +1,3 @@
-/* 
- * RealmSpeak is the Java application for playing the board game Magic Realm.
- * Copyright (c) 2005-2015 Robin Warren
- * E-mail: robin@dewkid.com
- * 
- * This program is free software: you can redistribute it and/or modify it under the terms of the
- * GNU General Public License as published by the Free Software Foundation, either version 3 of the License,
- * or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
- * implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
- * for more details.
- * 
- * You should have received a copy of the GNU General Public License along with this program. If not, see
- *
- * http://www.gnu.org/licenses/
- */
 package com.robin.magic_realm.RealmBattle;
 
 import java.awt.*;
@@ -30,6 +13,7 @@ import com.robin.magic_realm.components.*;
 import com.robin.magic_realm.components.swing.RealmComponentOptionChooser;
 import com.robin.magic_realm.components.utility.BattleUtility;
 import com.robin.magic_realm.components.utility.Constants;
+import com.robin.magic_realm.components.utility.RealmUtility;
 import com.robin.magic_realm.components.wrapper.*;
 
 public class DenizenCombatSheet extends CombatSheet {
@@ -37,15 +21,15 @@ public class DenizenCombatSheet extends CombatSheet {
 	// By definition, there can only be ONE defender, as the defender is the sheetowner
 	// EXCEPTION:  When hirelings deploy to RED-side up T Monsters, and there are other monster attackers, there can be multiple defenders
 	private static final int POS_DEFENDER			= 0;
-	private static final int POS_DEFENDER_BOX1		= 1; // sheet owner
-	private static final int POS_DEFENDER_BOX2		= 2;
-	private static final int POS_DEFENDER_BOX3		= 3;
+	private static final int POS_DEFENDER_BOX1		= 1; // sheet owner; charge and thrust
+	private static final int POS_DEFENDER_BOX2		= 2; // dodge and swing
+	private static final int POS_DEFENDER_BOX3		= 3; // duck and smash
 	
 	// By definition, there can only be ONE defender target (with or without a horse)
 	private static final int POS_DEFENDER_TARGETS	= 4;
-	private static final int POS_DEFENDER_TARGET_BOX1	= 5;
-	private static final int POS_DEFENDER_TARGET_BOX2	= 6;
-	private static final int POS_DEFENDER_TARGET_BOX3	= 7;
+	private static final int POS_DEFENDER_TARGET_BOX1	= 5; // charge and thrust
+	private static final int POS_DEFENDER_TARGET_BOX2	= 6; // dodge and swing
+	private static final int POS_DEFENDER_TARGET_BOX3	= 7; // duck and smash
 
 	// There can be MULTIPLE attackers
 	private static final int POS_ATTACKERS			= 8;
@@ -59,26 +43,66 @@ public class DenizenCombatSheet extends CombatSheet {
 	
 	private static final int POS_DEAD_BOX			=15;
 	
+	
+	private static final int POS_DEFENDER_CHARGE_SMASH	= 16; // attack (x-axis): 3 defense (y-axis): 1
+	private static final int POS_DEFENDER_CHARGE_SWING	= 17; // attack (x-axis): 2 defense (y-axis): 1
+	private static final int POS_DEFENDER_DODGE_SMASH	= 18; // attack (x-axis): 3 defense (y-axis): 2
+	private static final int POS_DEFENDER_DODGE_THRUST	= 19; // attack (x-axis): 1 defense (y-axis): 2
+	private static final int POS_DEFENDER_DUCK_SWING	= 20; // attack (x-axis): 2 defense (y-axis): 3
+	private static final int POS_DEFENDER_DUCK_THRUST	= 21; // attack (x-axis): 1 defense (y-axis): 3
+	
+	private static final int POS_DEFENDER_TARGET_CHARGE_SMASH	= 22; // attack: 3 defense: 1
+	private static final int POS_DEFENDER_TARGET_CHARGE_SWING	= 23; // attack: 2 defense: 1
+	private static final int POS_DEFENDER_TARGET_DODGE_SMASH	= 24; // attack: 3 defense: 2
+	private static final int POS_DEFENDER_TARGET_DODGE_THRUST	= 25; // attack: 1 defense: 2
+	private static final int POS_DEFENDER_TARGET_DUCK_SWING		= 26; // attack: 2 defense: 3
+	private static final int POS_DEFENDER_TARGET_DUCK_THRUST	= 27; // attack: 1 defense: 3
+	
+	
 	// Denizen sheet
 	private static final int DEN_ROW1 = 76;
-	private static final int DEN_ROW2 = 166;
+	private static final int DEN_ROW2 = 167;
 	private static final int DEN_ROW3 = 258;
 	
 	private static final int DEN_COL1 = 52;
 	private static final int DEN_COL2 = 168;
 	private static final int DEN_COL3 = 284;
 	
+	private static final int TARGET_ROW1 = 444;
+	private static final int TARGET_ROW2 = 534;
+	private static final int TARGET_ROW3 = 624;
+	//Super Realm
+	private static final int DEN_ROW0_SR = 28;
+	private static final int DEN_ROW1_SR = 78;
+	private static final int DEN_ROW2_SR = 174;
+	private static final int DEN_ROW3_SR = 270;
+	
+	private static final int DEN_COL1_SR = 89;
+	private static final int DEN_COL2_SR = 205;
+	private static final int DEN_COL3_SR = 322;
+	
+	private static final int ATT_COL1_SR = 440;
+	private static final int ATT_COL2_SR = 536;
+	
+	private static final int TARGET_ROW1_SR = 448;
+	private static final int TARGET_ROW2_SR = 544;
+	private static final int TARGET_ROW3_SR = 640;
+	
 	private static final Point[] DENIZEN_SHEET = {
+			
+			// Defender=Denizen
 			new Point(DEN_COL2+80,DEN_ROW1-20),
 			new Point(DEN_COL1,DEN_ROW1),
 			new Point(DEN_COL2,DEN_ROW2),
 			new Point(DEN_COL3,DEN_ROW3),
 			
+			// Target
 			new Point(DEN_COL1+50,320),
-			new Point(DEN_COL1,440),
-			new Point(DEN_COL2,440),
-			new Point(DEN_COL3,440),
+			new Point(DEN_COL3,TARGET_ROW1),
+			new Point(DEN_COL2,TARGET_ROW1),
+			new Point(DEN_COL1,TARGET_ROW1),
 			
+			// Attackers
 			new Point(540,25),
 			new Point(428,DEN_ROW1),
 			new Point(428,DEN_ROW2),
@@ -89,10 +113,70 @@ public class DenizenCombatSheet extends CombatSheet {
 			new Point(524,DEN_ROW3),
 			
 			new Point(524,440),
+			
+			// Additional defender (=denizen) spots for Super Realm
+			new Point(DEN_COL3,DEN_ROW1),
+			new Point(DEN_COL2,DEN_ROW1),
+			new Point(DEN_COL3,DEN_ROW2),
+			new Point(DEN_COL1,DEN_ROW2),
+			new Point(DEN_COL2,DEN_ROW3),
+			new Point(DEN_COL1,DEN_ROW3),
+			
+			// Additional target spots for Super Realm
+			new Point(DEN_COL3,TARGET_ROW1),
+			new Point(DEN_COL2,TARGET_ROW1),
+			new Point(DEN_COL3,TARGET_ROW2),
+			new Point(DEN_COL1,TARGET_ROW2),
+			new Point(DEN_COL2,TARGET_ROW3),
+			new Point(DEN_COL1,TARGET_ROW3),
+	};
+	
+	private static final Point[] DENIZEN_SHEET_SR = {
+			
+			// Defender=Denizen
+			new Point((DEN_COL2_SR+DEN_COL3_SR),DEN_ROW0_SR),
+			new Point(DEN_COL1_SR,DEN_ROW1_SR),
+			new Point(DEN_COL2_SR,DEN_ROW2_SR),
+			new Point(DEN_COL3_SR,DEN_ROW3_SR),
+			
+			// Target
+			new Point(ATT_COL1_SR,320), //??
+			new Point(DEN_COL3_SR,TARGET_ROW1_SR),
+			new Point(DEN_COL2_SR,TARGET_ROW2_SR),
+			new Point(DEN_COL1_SR,TARGET_ROW3_SR),
+			
+			// Attackers
+			new Point((DEN_COL3_SR+ATT_COL1_SR)/2,DEN_ROW0_SR),
+			new Point(ATT_COL1_SR,DEN_ROW1_SR),
+			new Point(ATT_COL1_SR,DEN_ROW2_SR),
+			new Point(ATT_COL1_SR,DEN_ROW3_SR),
+			
+			new Point(ATT_COL2_SR,DEN_ROW1_SR),
+			new Point(ATT_COL2_SR,DEN_ROW2_SR),
+			new Point(ATT_COL2_SR,DEN_ROW3_SR),
+			
+			new Point(ATT_COL2_SR,(DEN_ROW3_SR+TARGET_ROW1_SR)/2),
+			
+			// Additional defender (=denizen) spots for Super Realm
+			new Point(DEN_COL3_SR,DEN_ROW1_SR),
+			new Point(DEN_COL2_SR,DEN_ROW1_SR),
+			new Point(DEN_COL3_SR,DEN_ROW2_SR),
+			new Point(DEN_COL1_SR,DEN_ROW2_SR),
+			new Point(DEN_COL2_SR,DEN_ROW3_SR),
+			new Point(DEN_COL1_SR,DEN_ROW3_SR),
+			
+			// Additional target spots for Super Realm
+			new Point(DEN_COL1_SR,TARGET_ROW1_SR),
+			new Point(DEN_COL1_SR,TARGET_ROW2_SR),
+			new Point(DEN_COL2_SR,TARGET_ROW1_SR),
+			new Point(DEN_COL2_SR,TARGET_ROW3_SR),
+			new Point(DEN_COL3_SR,TARGET_ROW2_SR),
+			new Point(DEN_COL3_SR,TARGET_ROW3_SR),
 	};
 	
 	private boolean isOwnedByActive;
 	private boolean targetNeedsAssignment = false;
+	HostPrefWrapper hostPrefs;
 	
 	/**
 	 * Testing constructor ONLY!!!
@@ -100,11 +184,12 @@ public class DenizenCombatSheet extends CombatSheet {
 	private DenizenCombatSheet() {
 		super();
 	}
-	public DenizenCombatSheet(CombatFrame frame,BattleModel model,RealmComponent participant,boolean interactiveFrame) {
-		super(frame,model,participant,interactiveFrame);
+	public DenizenCombatSheet(CombatFrame frame,BattleModel model,RealmComponent participant,boolean interactiveFrame, HostPrefWrapper hostPrefs) {
+		super(frame,model,participant,interactiveFrame,hostPrefs);
 		
 		RealmComponent owner = sheetOwner.getOwner();
 		isOwnedByActive = (owner!=null && owner.equals(combatFrame.getActiveParticipant()));
+		this.hostPrefs = hostPrefs;
 		
 		updateLayout();
 	}
@@ -113,12 +198,62 @@ public class DenizenCombatSheet extends CombatSheet {
 		return POS_DEAD_BOX;
 	}
 	
-	protected Point[] getPositions() {
+	protected int getBoxIndexFromCombatBoxes(int boxA, int boxD) {
+		if (boxA == 0 || boxD==0) return POS_DEFENDER_TARGETS;
+		if (boxA == 3 && boxD==3) return POS_DEFENDER_TARGET_BOX1;
+		if (boxA == 2 && boxD==2) return POS_DEFENDER_TARGET_BOX2;
+		if (boxA == 1 && boxD==1) return POS_DEFENDER_TARGET_BOX3;
+		if (boxA == 3 && boxD==1) return POS_DEFENDER_TARGET_CHARGE_SMASH;
+		if (boxA == 2 && boxD==1) return POS_DEFENDER_TARGET_CHARGE_SWING;
+		if (boxA == 3 && boxD==2) return POS_DEFENDER_TARGET_DODGE_SMASH;
+		if (boxA == 1 && boxD==2) return POS_DEFENDER_TARGET_DODGE_THRUST;
+		if (boxA == 2 && boxD==3) return POS_DEFENDER_TARGET_DUCK_SWING;
+		if (boxA == 1 && boxD==3) return POS_DEFENDER_TARGET_DUCK_THRUST;
+		return -1;
+	}
+	
+	protected int getBoxIndexFromCombatBoxesForDefender(int boxA, int boxD) {
+		if (boxA == 0 || boxD==0) return POS_DEFENDER;
+		if (boxA == 1 && boxD==1) return POS_DEFENDER_BOX1;
+		if (boxA == 2 && boxD==2) return POS_DEFENDER_BOX2;
+		if (boxA == 3 && boxD==3) return POS_DEFENDER_BOX3;
+		if (boxA == 3 && boxD==1) return POS_DEFENDER_CHARGE_SMASH;
+		if (boxA == 2 && boxD==1) return POS_DEFENDER_CHARGE_SWING;
+		if (boxA == 3 && boxD==2) return POS_DEFENDER_DODGE_SMASH;
+		if (boxA == 1 && boxD==2) return POS_DEFENDER_DODGE_THRUST;
+		if (boxA == 2 && boxD==3) return POS_DEFENDER_DUCK_SWING;
+		if (boxA == 1 && boxD==3) return POS_DEFENDER_DUCK_THRUST;
+		return -1;
+	}
+	
+	protected int getBoxIndexFromCombatBoxesForDefenderTarget(int boxA, int boxD) {
+		return getBoxIndexFromCombatBoxes(boxA,boxD);
+	}
+	
+	protected int getBoxIndexFromCombatBoxesForAttacker(int boxA, int boxD) {
+		if (boxA == 0) return POS_ATTACKERS;
+		if (boxA == 1) return POS_ATTACKERS_BOX1;
+		if (boxA == 2) return POS_ATTACKERS_BOX2;
+		if (boxA == 3) return POS_ATTACKERS_BOX3;
+		return -1;
+	}
+	
+	protected Point[] getPositions(HostPrefWrapper hostPrefs) {
+		if (hostPrefs.hasPref(Constants.SR_COMBAT)) {
+			return DENIZEN_SHEET_SR;
+		}
 		return DENIZEN_SHEET;
 	}
 
 	protected ImageIcon getImageIcon() {
+		if (hostPrefs!=null && hostPrefs.hasPref(Constants.SR_COMBAT)) {
+			return ImageCache.getIcon("combat/den_sr");
+		}
 		return ImageCache.getIcon("combat/den_melee3");
+	}
+	
+	protected int getHotSpotSize() {
+		return 92;
 	}
 	
 	protected String[] splitHotSpot(int index) {
@@ -128,13 +263,26 @@ public class DenizenCombatSheet extends CombatSheet {
 				case POS_DEFENDER_BOX1:
 				case POS_DEFENDER_BOX2:
 				case POS_DEFENDER_BOX3:
+				case POS_DEFENDER_CHARGE_SMASH:
+				case POS_DEFENDER_CHARGE_SWING:
+				case POS_DEFENDER_DODGE_SMASH:
+				case POS_DEFENDER_DODGE_THRUST:
+				case POS_DEFENDER_DUCK_SWING:
+				case POS_DEFENDER_DUCK_THRUST:
 					if (sheetOwner.hasHorse()) return horseRiderSplit;
 					break;
 				case POS_DEFENDER_TARGET_BOX1:
 				case POS_DEFENDER_TARGET_BOX2:
 				case POS_DEFENDER_TARGET_BOX3:
+				case POS_DEFENDER_TARGET_CHARGE_SMASH:
+				case POS_DEFENDER_TARGET_CHARGE_SWING:
+				case POS_DEFENDER_TARGET_DODGE_SMASH:
+				case POS_DEFENDER_TARGET_DODGE_THRUST:
+				case POS_DEFENDER_TARGET_DUCK_SWING:
+				case POS_DEFENDER_TARGET_DUCK_THRUST:
 					RealmComponent target = sheetOwner.getTarget();
-					if (target!=null && target.hasHorse()) return horseRiderSplit;
+					RealmComponent target2 = sheetOwner.get2ndTarget();
+					if ((target!=null && target.hasHorse()) || (target2!=null && target2.hasHorse())) return horseRiderSplit;
 					break;
 				case POS_ATTACKERS_BOX1:
 				case POS_ATTACKERS_BOX2:
@@ -150,8 +298,19 @@ public class DenizenCombatSheet extends CombatSheet {
 		CombatWrapper combat = new CombatWrapper(combatFrame.getActiveParticipant().getGameObject());
 		GameObject go = combat.getCastSpell();
 		SpellWrapper spell = go==null?null:new SpellWrapper(go);
+		boolean battleMage = false;
+		if (combatFrame.getActiveParticipant().isCharacter()) {
+			GameObject chararacterGo = combatFrame.getActiveParticipant().getGameObject();
+			CharacterWrapper activeCharacter = new CharacterWrapper(chararacterGo);
+			HostPrefWrapper hostPrefs = HostPrefWrapper.findHostPrefs(chararacterGo.getGameData());
+			if (activeCharacter.affectedByKey(Constants.BATTLE_MAGE) || hostPrefs.hasPref(Constants.SR_ADV_STEEL_AGAINST_MAGIC)) {
+				if (activeCharacter.hasOnlyStaffAsActivatedWeapon() && !activeCharacter.hasActiveArmorChits()) {
+					battleMage = true;
+				}
+			}
+		}
 		hotspotHash.clear();
-		Collection c;
+		Collection<RealmComponent> c;
 		
 		if (!interactiveFrame) {
 			return;
@@ -160,36 +319,26 @@ public class DenizenCombatSheet extends CombatSheet {
 		switch(combatFrame.getActionState()) {
 			case Constants.COMBAT_LURE:
 				if (isOwnedByActive && !sheetOwner.isMistLike()) {
-					c = layoutHash.getList(new Integer(POS_ATTACKERS_BOX1));
-					if (c==null || c.size()==0) {
-						if (combatFrame.areDenizensToLure(sheetOwner)) {
-							hotspotHash.put(POS_ATTACKERS_BOX1,"Lure");
-						}
+					if (canLureMoreDenizens() && combatFrame.areDenizensToLure()) {
+						hotspotHash.put(Integer.valueOf(POS_ATTACKERS_BOX1),"Lure");
 					}
-					
-					// Only add the Flip action if not a "pinning" type Monster
-					if (sheetOwner.isMonster()) {
-						MonsterChitComponent monster = (MonsterChitComponent)sheetOwner;
-						if (monster.canPinOpponent()) {
-							break;
-						}
+					if (denizenCanFlip(sheetOwner)) {
+						hotspotHash.put(Integer.valueOf(POS_DEFENDER_BOX1),"Flip");
 					}
-					hotspotHash.put(POS_DEFENDER_BOX1,"Flip");
 					if (sheetOwner.hasHorse()) {
-						hotspotHash.put(POS_DEFENDER_BOX2,"Flip");
+						hotspotHash.put(Integer.valueOf(POS_DEFENDER_BOX2),"Flip");
 					}
 				}
 				break;
 			case Constants.COMBAT_RANDOM_ASSIGN:
 				if (!sheetOwner.isMistLike()) {
 					if (isOwnedByActive) {
-						if (combatFrame.areDenizensToLure(sheetOwner)) {
+						if (combatFrame.areDenizensToLure()) {
 							// Now, need to make sure this sheetOwner is not currently targeted by a RED-side-up T Monster
 							boolean hasRedSideAttacker = false;
-							c = layoutHash.getList(new Integer(POS_ATTACKERS_BOX1));
+							c = layoutHash.getList(Integer.valueOf(POS_ATTACKERS_BOX1));
 							if (c!=null && !c.isEmpty()) {
-								for (Iterator i=c.iterator();i.hasNext();) {
-									RealmComponent rc = (RealmComponent)i.next();
+								for (RealmComponent rc : c) {
 									if (rc.isMonster()) {
 										MonsterChitComponent monster = (MonsterChitComponent)rc;
 										if (monster.isPinningOpponent()) {
@@ -200,7 +349,7 @@ public class DenizenCombatSheet extends CombatSheet {
 								}
 							}
 							if (!hasRedSideAttacker) {
-								hotspotHash.put(new Integer(POS_ATTACKERS_BOX1),"Random Assignment");
+								hotspotHash.put(Integer.valueOf(POS_ATTACKERS_BOX1),"Random Assignment");
 							}
 						}
 					}
@@ -209,12 +358,12 @@ public class DenizenCombatSheet extends CombatSheet {
 			case Constants.COMBAT_DEPLOY:
 				if (!sheetOwner.isMistLike()) {
 					// only unassigned hirelings owned by the playing character can deploy at this point
-					c = layoutHash.getList(new Integer(POS_ATTACKERS_BOX1));
+					c = layoutHash.getList(Integer.valueOf(POS_ATTACKERS_BOX1));
 					if (c==null || c.size()==0) { // No direct attackers
-						c = layoutHash.getList(new Integer(POS_DEFENDER_TARGET_BOX1));
+						c = layoutHash.getList(Integer.valueOf(POS_DEFENDER_TARGET_BOX3));
 						if (c==null || c.size()==0) { // Don't forget to check defender target for red-side up T Monsters
 							if (isOwnedByActive && model.getAllBattleGroups(true).size()>1) {
-								hotspotHash.put(new Integer(POS_DEFENDER_BOX1),"Deploy");
+								hotspotHash.put(Integer.valueOf(POS_DEFENDER_BOX1),"Deploy");
 							}
 						}
 					}
@@ -224,29 +373,31 @@ public class DenizenCombatSheet extends CombatSheet {
 				// Character assign
 				if (combatFrame.getActiveCharacter()!=null
 						&& combatFrame.getActiveCharacterIsHere()
-						&& combatFrame.getActiveParticipant().getTarget()==null
-						&& spell==null) {
+						&& (combatFrame.getActiveParticipant().getTarget()==null
+						|| (combatFrame.getActiveParticipant().get2ndTarget()==null && combatFrame.getActiveParticipant().isCharacter() && (new CharacterWrapper(combatFrame.getActiveParticipant().getGameObject())).getActiveWeapons() !=null && (new CharacterWrapper(combatFrame.getActiveParticipant().getGameObject())).getActiveWeapons().size() > 1)) 
+						&& (spell==null || battleMage)) {
 					String title = combatFrame.getActiveCharacter().getGameObject().getName()+" Target";
 					if (containsEnemy(
 							combatFrame.getActiveParticipant(),
-							layoutHash.getList(new Integer(POS_ATTACKERS_BOX1)))) {
-						hotspotHash.put(new Integer(POS_ATTACKERS_BOX1),title);
+							layoutHash.getList(Integer.valueOf(POS_ATTACKERS_BOX1)))) {
+						hotspotHash.put(Integer.valueOf(POS_ATTACKERS_BOX1),title);
 					}
 					if (containsEnemy(
 							combatFrame.getActiveParticipant(),
-							layoutHash.getList(new Integer(POS_DEFENDER_TARGET_BOX1)))) {
-						hotspotHash.put(new Integer(POS_DEFENDER_TARGET_BOX1),title);
+							layoutHash.getList(Integer.valueOf(POS_DEFENDER_TARGET_BOX3)))) {
+						hotspotHash.put(Integer.valueOf(POS_DEFENDER_TARGET_BOX3),title);
 					}
 					RealmComponent sheetOwnerOwner = sheetOwner.getOwner();
 					if (combatFrame.allowsTreachery() || !combatFrame.getActiveParticipant().equals(sheetOwnerOwner)) {
-						hotspotHash.put(new Integer(POS_DEFENDER_BOX1),title);
+						hotspotHash.put(Integer.valueOf(POS_DEFENDER_BOX1),title);
 					}
 				}
 				// Hireling assign
 				if (isOwnedByActive
-						&& layoutHash.get(new Integer(POS_ATTACKERS_BOX1))!=null
-						&& sheetOwner.getTarget()==null) {
-					hotspotHash.put(new Integer(POS_DEFENDER_TARGET_BOX1),sheetOwner.getGameObject().getName()+" Target");
+						&& layoutHash.get(Integer.valueOf(POS_ATTACKERS_BOX1))!=null
+						&& sheetOwner.getTarget()==null
+						&& sheetOwner.get2ndTarget()==null) {
+					hotspotHash.put(Integer.valueOf(POS_DEFENDER_TARGET_BOX3),sheetOwner.getGameObject().getName()+" Target");
 					targetNeedsAssignment = true;
 				}
 				break;
@@ -274,7 +425,10 @@ public class DenizenCombatSheet extends CombatSheet {
 					}
 					if (containsFriend(
 							combatFrame.getActiveParticipant(),
-							getAllBoxListFromLayout(POS_DEFENDER_TARGET_BOX1))) {
+							getAllBoxListsFromLayout(new Integer[] {POS_DEFENDER_TARGET_BOX1,POS_DEFENDER_TARGET_BOX2,POS_DEFENDER_TARGET_BOX3,
+									POS_DEFENDER_TARGET_CHARGE_SMASH,POS_DEFENDER_TARGET_CHARGE_SWING,
+									POS_DEFENDER_TARGET_DODGE_SMASH,POS_DEFENDER_TARGET_DODGE_THRUST,
+									POS_DEFENDER_TARGET_DUCK_SWING,POS_DEFENDER_TARGET_DUCK_THRUST}))) {
 						canPositionSquare = true;
 					}
 //					if (getAllBoxListFromLayout(POS_DEFENDER_BOX1).size()>1) {
@@ -283,37 +437,55 @@ public class DenizenCombatSheet extends CombatSheet {
 				}
 				
 				if (canPositionRed) {
-					hotspotHash.put(new Integer(POS_DEFENDER_BOX1),"Maneuver");
-					hotspotHash.put(new Integer(POS_DEFENDER_BOX2),"Maneuver");
-					hotspotHash.put(new Integer(POS_DEFENDER_BOX3),"Maneuver");
+					hotspotHash.put(Integer.valueOf(POS_DEFENDER_BOX1),"Maneuver");
+					hotspotHash.put(Integer.valueOf(POS_DEFENDER_BOX2),"Maneuver");
+					hotspotHash.put(Integer.valueOf(POS_DEFENDER_BOX3),"Maneuver");
+					if (hostPrefs.hasPref(Constants.SR_COMBAT)) {
+						hotspotHash.put(Integer.valueOf(POS_DEFENDER_CHARGE_SMASH),"Maneuver");
+						hotspotHash.put(Integer.valueOf(POS_DEFENDER_CHARGE_SWING),"Maneuver");
+						hotspotHash.put(Integer.valueOf(POS_DEFENDER_DODGE_SMASH),"Maneuver");
+						hotspotHash.put(Integer.valueOf(POS_DEFENDER_DODGE_THRUST),"Maneuver");
+						hotspotHash.put(Integer.valueOf(POS_DEFENDER_DUCK_SWING),"Maneuver");
+						hotspotHash.put(Integer.valueOf(POS_DEFENDER_DUCK_THRUST),"Maneuver");
+					}
 				}
 				if (canPositionCircle) {
-					hotspotHash.put(new Integer(POS_ATTACKERS_BOX1),"Position");
-					hotspotHash.put(new Integer(POS_ATTACKERS_BOX2),"Position");
-					hotspotHash.put(new Integer(POS_ATTACKERS_BOX3),"Position");
+					hotspotHash.put(Integer.valueOf(POS_ATTACKERS_BOX1),"Position");
+					hotspotHash.put(Integer.valueOf(POS_ATTACKERS_BOX2),"Position");
+					hotspotHash.put(Integer.valueOf(POS_ATTACKERS_BOX3),"Position");
 				}
-				if (canPositionSquare) {
-					hotspotHash.put(new Integer(POS_DEFENDER_TARGET_BOX1),"Position");
-					hotspotHash.put(new Integer(POS_DEFENDER_TARGET_BOX2),"Position");
-					hotspotHash.put(new Integer(POS_DEFENDER_TARGET_BOX3),"Position");
+				if (canPositionSquare && (!hostPrefs.hasPref(Constants.SR_COMBAT) || hostPrefs.hasPref(Constants.SR_COMBAT_POSITIONING))) {
+					hotspotHash.put(Integer.valueOf(POS_DEFENDER_TARGET_BOX1),"Position");
+					hotspotHash.put(Integer.valueOf(POS_DEFENDER_TARGET_BOX2),"Position");
+					hotspotHash.put(Integer.valueOf(POS_DEFENDER_TARGET_BOX3),"Position");
+					if (hostPrefs.hasPref(Constants.SR_COMBAT)) {
+						hotspotHash.put(Integer.valueOf(POS_DEFENDER_TARGET_CHARGE_SMASH),"Position");
+						hotspotHash.put(Integer.valueOf(POS_DEFENDER_TARGET_CHARGE_SWING),"Position");
+						hotspotHash.put(Integer.valueOf(POS_DEFENDER_TARGET_DODGE_SMASH),"Position");
+						hotspotHash.put(Integer.valueOf(POS_DEFENDER_TARGET_DODGE_THRUST),"Position");
+						hotspotHash.put(Integer.valueOf(POS_DEFENDER_TARGET_DUCK_SWING),"Position");
+						hotspotHash.put(Integer.valueOf(POS_DEFENDER_TARGET_DUCK_THRUST),"Position");
+					}
 				}
 				
 				// Character might have a target to attack
 				RealmComponent target = combatFrame.getActiveParticipant().getTarget();
-				ArrayList allSheetParticipants = new ArrayList(sheetParticipants);
+				RealmComponent target2 = combatFrame.getActiveParticipant().get2ndTarget();
+				ArrayList<RealmComponent> allSheetParticipants = new ArrayList<RealmComponent>(sheetParticipants);
 				allSheetParticipants.add(sheetOwner);
 				boolean sheetHasTarget = target!=null && sheetParticipants.contains(target);
+				boolean sheetHasTarget2 = target2!=null && sheetParticipants.contains(target2);
 				boolean sheetHasSpellTarget = spell!=null && spell.isAttackSpell() && spell.targetsRealmComponents(allSheetParticipants);
-				if (sheetHasTarget || sheetHasSpellTarget) {
+				if (sheetHasTarget || sheetHasTarget2 || sheetHasSpellTarget) {
 					int boxReq = spell==null?0:spell.getGameObject().getThisInt("box_req"); // most spells will be zero
-					if (spell==null || boxReq==0 || boxReq==1) {
-						hotspotHash.put(new Integer(POS_ATTACKERS_WEAPON1),"Attack");
+					if ((spell==null || battleMage) || boxReq==0 || boxReq==1) {
+						hotspotHash.put(Integer.valueOf(POS_ATTACKERS_WEAPON1),"Attack");
 					}
-					if (spell==null || boxReq==0 || boxReq==2) {
-						hotspotHash.put(new Integer(POS_ATTACKERS_WEAPON2),"Attack");
+					if ((spell==null || battleMage) || boxReq==0 || boxReq==2) {
+						hotspotHash.put(Integer.valueOf(POS_ATTACKERS_WEAPON2),"Attack");
 					}
-					if (spell==null || boxReq==0 || boxReq==3) {
-						hotspotHash.put(new Integer(POS_ATTACKERS_WEAPON3),"Attack");
+					if ((spell==null || battleMage) || boxReq==0 || boxReq==3) {
+						hotspotHash.put(Integer.valueOf(POS_ATTACKERS_WEAPON3),"Attack");
 					}
 				}
 				break;
@@ -322,12 +494,23 @@ public class DenizenCombatSheet extends CombatSheet {
 			
 				// Check conditions for REPLACE_FIGHT (Battle Bracelets)
 				RealmComponent aTarget = combatFrame.getActiveParticipant().getTarget();
-				if (combatFrame.getActiveParticipant().getTarget()!=null && sheetParticipants.contains(aTarget)) {
+				if (aTarget!=null && sheetParticipants.contains(aTarget)) {
 					if (character.canReplaceFight(aTarget)) {
 						// can replace fight
-						hotspotHash.put(new Integer(POS_ATTACKERS_WEAPON1),"Replace Attack");
-						hotspotHash.put(new Integer(POS_ATTACKERS_WEAPON2),"Replace Attack");
-						hotspotHash.put(new Integer(POS_ATTACKERS_WEAPON3),"Replace Attack");
+						hotspotHash.put(Integer.valueOf(POS_ATTACKERS_WEAPON1),"Replace Attack");
+						hotspotHash.put(Integer.valueOf(POS_ATTACKERS_WEAPON2),"Replace Attack");
+						hotspotHash.put(Integer.valueOf(POS_ATTACKERS_WEAPON3),"Replace Attack");
+					}
+					else if (hostPrefs.hasPref(Constants.SR_ADV_SURVIVAL_TACTICS)) {
+						if (character.canReplaceParryThrustAttacks(aTarget) || character.canReplaceAlertedParryInBox(aTarget,1)) {
+							hotspotHash.put(Integer.valueOf(POS_ATTACKERS_WEAPON1),"Replace Attack");
+						}
+						if (character.canReplaceParrySwingAttacks(aTarget) || character.canReplaceAlertedParryInBox(aTarget,2)) {
+							hotspotHash.put(Integer.valueOf(POS_ATTACKERS_WEAPON2),"Replace Attack");
+						}
+						if (character.canReplaceParrySmashAttacks(aTarget) || character.canReplaceAlertedParryInBox(aTarget,3)) {
+							hotspotHash.put(Integer.valueOf(POS_ATTACKERS_WEAPON2),"Replace Attack");
+						}
 					}
 				}
 				break;
@@ -338,20 +521,20 @@ public class DenizenCombatSheet extends CombatSheet {
 		battleChitsWithRolls.clear();
 		layoutHash.clear();
 		
-		sheetParticipants = new ArrayList();
+		sheetParticipants = new ArrayList<RealmComponent>();
 		sheetParticipants.add(sheetOwner);
 		
-		ArrayList excludeList = new ArrayList();
+		ArrayList<RealmComponent> excludeList = new ArrayList<RealmComponent>();
 		excludeList.add(sheetOwner);
 		
 		if (isOwnedByActive || combatFrame.getActionState()>=Constants.COMBAT_RESOLVING || sheetOwner.getOwnerId()==null) {
 			// Always place, if owned by active, owned by none, or resolving attacks
-			placeParticipant(sheetOwner,POS_DEFENDER_BOX1);
+			placeParticipantDefender(sheetOwner);
 		}
 		else {
 			// If being attacked by a character, then positioning secrecy is required
 			boolean needsSecrecy = isAttackedByCharacter();
-			placeParticipant(sheetOwner,POS_DEFENDER_BOX1,needsSecrecy,false);
+			placeParticipantDefender(sheetOwner,needsSecrecy,false);
 		}
 		
 		// Sheet owner's target
@@ -360,20 +543,27 @@ public class DenizenCombatSheet extends CombatSheet {
 			sheetParticipants.add(defenderTarget);
 			excludeList.add(defenderTarget);
 			if (!addedToDead(defenderTarget)) {
-				placeParticipant(defenderTarget,POS_DEFENDER_TARGET_BOX1);
+				placeParticipantDefenderTarget(defenderTarget);
+			}
+		}
+		RealmComponent defenderTarget2 = sheetOwner.get2ndTarget();
+		if (defenderTarget2!=null) {
+			sheetParticipants.add(defenderTarget2);
+			excludeList.add(defenderTarget2);
+			if (!addedToDead(defenderTarget2)) {
+				placeParticipantDefenderTarget(defenderTarget2);
 			}
 		}
 		
 		// If the sheet owner is a denizen, then ALL denizens should be in the middle... I think...
-		if (sheetOwner.getOwnerId()==null && defenderTarget!=null) {
-			int p = 1;
-			ArrayList denizens = new ArrayList(model.getDenizenBattleGroup().getBattleParticipants());
-			for (Iterator i=denizens.iterator();i.hasNext();) {
-				RealmComponent denizen = (RealmComponent)i.next();
-				if (!excludeList.contains(denizen) && defenderTarget.equals(denizen.getTarget())) {
-					placeParticipant(denizen,POS_DEFENDER_BOX1+p);
-					p++;
-					p%=3;
+		if (sheetOwner.getOwnerId()==null && (defenderTarget!=null || defenderTarget2!=null)) {
+			ArrayList<RealmComponent> denizens = new ArrayList<RealmComponent>(model.getDenizenBattleGroup().getBattleParticipants());
+			for (RealmComponent denizen : denizens) {
+				if (!excludeList.contains(denizen) && (
+						(defenderTarget!=null && (defenderTarget.equals(denizen.getTarget()) || defenderTarget.equals(denizen.get2ndTarget())))
+					|| (defenderTarget2!=null && (defenderTarget2.equals(denizen.getTarget()) || defenderTarget2.equals(denizen.get2ndTarget())))
+						)) {
+					placeParticipantDefender(denizen);
 					sheetParticipants.add(denizen);
 					excludeList.add(denizen);
 				}
@@ -381,7 +571,7 @@ public class DenizenCombatSheet extends CombatSheet {
 		}
 		
 		// Sheet owner's attackers (including characters)
-		placeAllAttacks(POS_ATTACKERS_BOX1,POS_ATTACKERS_WEAPON1,excludeList);
+		placeAllAttacks(POS_ATTACKERS_WEAPON1,POS_ATTACKERS_BOX1,excludeList);
 		
 		updateHotSpots();
 		
@@ -391,7 +581,10 @@ public class DenizenCombatSheet extends CombatSheet {
 	}
 	
 	protected void handleClick(int index,int swingConstant) {
-		if (hotspotHash.get(new Integer(index))==null) {
+		if (!hostPrefs.hasPref(Constants.HOUSE3_HORSE_WEAPON_SAME_BOX)) {
+			swingConstant = SwingConstants.RIGHT; //always ask where to place native horse
+		}
+		if (hotspotHash.get(Integer.valueOf(index))==null) {
 			// Don't handle clicks unless there is a hotspot
 			return;
 		}
@@ -400,31 +593,24 @@ public class DenizenCombatSheet extends CombatSheet {
 			case POS_ATTACKERS_BOX2:
 			case POS_ATTACKERS_BOX3:
 				if (combatFrame.getActionState()==Constants.COMBAT_LURE) {
-					int lureCount = combatFrame.selectedDenizenCount();
-					if (lureCount<=1) {
-						// Luring
-						combatFrame.lureDenizens(sheetOwner,1,false);
-					}
-					else if (lureCount>1) {
-						JOptionPane.showMessageDialog(combatFrame,"A hireling can only lure one denizen","Invalid Lure",JOptionPane.WARNING_MESSAGE);
-					}
+					lureDenizens(combatFrame,sheetOwner);
 				}
 				else if (combatFrame.getActionState()==Constants.COMBAT_RANDOM_ASSIGN) {
 					// Do random assignment (guaranteed to have ONE selected here)
-					combatFrame.lureDenizens(sheetOwner,1,false);
+					combatFrame.lureDenizens(sheetOwner,1,1,false,false);
 					combatFrame.updateRandomAssignment();
 				}
 				else if (combatFrame.getActionState()==Constants.COMBAT_ASSIGN) {
 					// Assign Target for character
-					combatFrame.assignTarget(filterEnemies(combatFrame.getActiveParticipant(),layoutHash.getList(new Integer(POS_ATTACKERS_BOX1))));
+					combatFrame.assignTarget(filterEnemies(combatFrame.getActiveParticipant(),layoutHash.getList(Integer.valueOf(POS_ATTACKERS_BOX1))));
 				}
 				else if (combatFrame.getActionState()==Constants.COMBAT_POSITIONING) {
-					ArrayList list = getAllBoxListFromLayout(POS_ATTACKERS_BOX1);
+					ArrayList<RealmComponent> list = getAllBoxListFromLayout(POS_ATTACKERS_BOX1);
 					if (sheetOwner.getOwnerId()==null) {
 						list = filterFriends(combatFrame.getActiveParticipant(),list);
 					}
 					
-					combatFrame.positionAttacker(list,index-POS_ATTACKERS_BOX1+1,false,swingConstant==SwingConstants.LEFT);
+					combatFrame.positionAttacker(list,index-POS_ATTACKERS_BOX1+1,index-POS_ATTACKERS_BOX1+1,false,swingConstant==SwingConstants.LEFT);
 					updateLayout();
 					repaint();
 				}
@@ -434,21 +620,30 @@ public class DenizenCombatSheet extends CombatSheet {
 			case POS_ATTACKERS_WEAPON3:
 				if (combatFrame.getActionState()==Constants.COMBAT_POSITIONING) {
 					// Character Play attack
-					combatFrame.playAttack(index-POS_ATTACKERS_WEAPON1+1);
+					combatFrame.playAttack(index-POS_ATTACKERS_WEAPON1+1,this.getSheetOwner());
 				}
 				else if (combatFrame.getActionState()==Constants.COMBAT_TACTICS) {
-					// Character Move attack
-					combatFrame.replaceAttack(index-POS_ATTACKERS_WEAPON1+1);
+					if (hostPrefs.hasPref(Constants.SR_ADV_SURVIVAL_TACTICS)){
+						combatFrame.replaceAttackOrParry(index-POS_ATTACKERS_WEAPON1+1,sheetOwner);
+					} else {
+						// Character Move attack
+						combatFrame.replaceAttack(index-POS_ATTACKERS_WEAPON1+1);
+					}
 				}
 				break;
 			case POS_DEFENDER_BOX1:
 			case POS_DEFENDER_BOX2:
 			case POS_DEFENDER_BOX3:
+			case POS_DEFENDER_CHARGE_SMASH:
+			case POS_DEFENDER_CHARGE_SWING:
+			case POS_DEFENDER_DODGE_SMASH:
+			case POS_DEFENDER_DODGE_THRUST:
+			case POS_DEFENDER_DUCK_SWING:
+			case POS_DEFENDER_DUCK_THRUST:
 				if (combatFrame.getActionState()==Constants.COMBAT_LURE) {
 					// Flip the counter
-					ArrayList list = layoutHash.getList(index);
-					for (Iterator i=list.iterator();i.hasNext();) {
-						RealmComponent rc = (RealmComponent)i.next();
+					ArrayList<RealmComponent> list = layoutHash.getList(Integer.valueOf(index));
+					for (RealmComponent rc : list) {
 						rc.flip();
 					}
 				}
@@ -460,34 +655,110 @@ public class DenizenCombatSheet extends CombatSheet {
 //					ArrayList list = new ArrayList();
 //					list.add(sheetOwner);
 					// Though MOST of the time, this list will only contain ONE defender, it does happen when there are more
-					ArrayList list = getAllBoxListFromLayout(POS_DEFENDER_BOX1);
+					ArrayList<RealmComponent> list
+					= getAllBoxListsFromLayout(new Integer[] {POS_DEFENDER_BOX1,POS_DEFENDER_BOX2,POS_DEFENDER_BOX3,
+							POS_DEFENDER_CHARGE_SMASH,POS_DEFENDER_CHARGE_SWING,
+							POS_DEFENDER_DODGE_SMASH,POS_DEFENDER_DODGE_THRUST,
+							POS_DEFENDER_DUCK_SWING,POS_DEFENDER_DUCK_THRUST});
 					boolean includeFlipside = sheetOwner.getOwnerId()!=null && !sheetOwner.isTraveler();
-					combatFrame.positionAttacker(list,index-POS_DEFENDER_BOX1+1,includeFlipside,swingConstant==SwingConstants.LEFT);
+					switch (index) {
+						case POS_DEFENDER_BOX1:
+						case POS_DEFENDER_BOX2:
+						case POS_DEFENDER_BOX3:
+							combatFrame.positionAttacker(list,index-POS_DEFENDER_BOX1+1,index-POS_DEFENDER_BOX1+1,includeFlipside,swingConstant==SwingConstants.LEFT);
+							break;
+						case POS_DEFENDER_CHARGE_SMASH:
+							combatFrame.positionAttacker(list,3,1,includeFlipside,swingConstant==SwingConstants.LEFT);
+							break;
+						case POS_DEFENDER_CHARGE_SWING:
+							combatFrame.positionAttacker(list,2,1,includeFlipside,swingConstant==SwingConstants.LEFT);
+							break;
+						case POS_DEFENDER_DODGE_SMASH:
+							combatFrame.positionAttacker(list,3,2,includeFlipside,swingConstant==SwingConstants.LEFT);
+							break;
+						case POS_DEFENDER_DODGE_THRUST:
+							combatFrame.positionAttacker(list,1,2,includeFlipside,swingConstant==SwingConstants.LEFT);
+							break;
+						case POS_DEFENDER_DUCK_SWING:
+							combatFrame.positionAttacker(list,2,3,includeFlipside,swingConstant==SwingConstants.LEFT);
+							break;
+						case POS_DEFENDER_DUCK_THRUST:
+							combatFrame.positionAttacker(list,1,3,includeFlipside,swingConstant==SwingConstants.LEFT);
+							break;
+					}
 					updateLayout();
 					repaint();
 				}
 				else if (combatFrame.getActionState()==Constants.COMBAT_ASSIGN) {
 					// Character target assignment
-					combatFrame.assignTarget(layoutHash.getList(new Integer(POS_DEFENDER_BOX1)));
+					ArrayList<RealmComponent> list = new ArrayList<RealmComponent>();
+					ArrayList<RealmComponent> list1 = layoutHash.getList(Integer.valueOf(POS_DEFENDER_BOX1));
+					if (list1!=null) {
+						list.addAll(list1);
+					}
+					ArrayList<RealmComponent> list2 = layoutHash.getList(Integer.valueOf(POS_DEFENDER));
+					if (list2!=null) {
+						list.addAll(list2);
+					}
+					combatFrame.assignTarget(list);
 				}
 				break;
 			case POS_DEFENDER_TARGET_BOX1:
 			case POS_DEFENDER_TARGET_BOX2:
 			case POS_DEFENDER_TARGET_BOX3:
+			case POS_DEFENDER_TARGET_CHARGE_SMASH:
+			case POS_DEFENDER_TARGET_CHARGE_SWING:
+			case POS_DEFENDER_TARGET_DODGE_SMASH:
+			case POS_DEFENDER_TARGET_DODGE_THRUST:
+			case POS_DEFENDER_TARGET_DUCK_SWING:
+			case POS_DEFENDER_TARGET_DUCK_THRUST:
 				if (combatFrame.getActionState()==Constants.COMBAT_ASSIGN) {
-					if (sheetOwner.getTarget()==null) {
+					if (sheetOwner.getTarget()==null && sheetOwner.get2ndTarget()==null) {
 						// Assign Target for denizen (sheetOwner)
-						combatFrame.assignTarget(sheetOwner,layoutHash.getList(new Integer(POS_ATTACKERS_BOX1)));
+						combatFrame.assignTarget(sheetOwner,layoutHash.getList(Integer.valueOf(POS_ATTACKERS_BOX1)));
 						updateLayout(); // so target can move to new box, if needed
 						repaint();
 					}
 					else {
 						// Assign Target for character from defenders target box
-						combatFrame.assignTarget(layoutHash.getList(new Integer(POS_DEFENDER_TARGET_BOX1)));
+						combatFrame.assignTarget(layoutHash.getList(Integer.valueOf(POS_DEFENDER_TARGET_BOX3)));
 					}
 				}
 				else if (combatFrame.getActionState()==Constants.COMBAT_POSITIONING) {
-					combatFrame.positionAttacker(getAllBoxListFromLayout(POS_DEFENDER_TARGET_BOX1),index-POS_DEFENDER_TARGET_BOX1+1,false,swingConstant==SwingConstants.LEFT);
+					ArrayList<RealmComponent> list
+					= getAllBoxListsFromLayout(new Integer[] {POS_DEFENDER_TARGET_BOX1,POS_DEFENDER_TARGET_BOX2,POS_DEFENDER_TARGET_BOX3,
+							POS_DEFENDER_TARGET_CHARGE_SMASH,POS_DEFENDER_TARGET_CHARGE_SWING,
+							POS_DEFENDER_TARGET_DODGE_SMASH,POS_DEFENDER_TARGET_DODGE_THRUST,
+							POS_DEFENDER_TARGET_DUCK_SWING,POS_DEFENDER_TARGET_DUCK_THRUST});
+					switch (index) {
+						case POS_DEFENDER_TARGET_BOX1:
+							combatFrame.positionAttacker(list,3,3,false,swingConstant==SwingConstants.LEFT);
+							break;
+						case POS_DEFENDER_TARGET_BOX2:
+							combatFrame.positionAttacker(list,2,2,false,swingConstant==SwingConstants.LEFT);
+							break;
+						case POS_DEFENDER_TARGET_BOX3:
+							combatFrame.positionAttacker(list,1,1,false,swingConstant==SwingConstants.LEFT);
+							break;
+						case POS_DEFENDER_TARGET_CHARGE_SMASH:
+							combatFrame.positionAttacker(list,3,1,false,swingConstant==SwingConstants.LEFT);
+							break;
+						case POS_DEFENDER_TARGET_CHARGE_SWING:
+							combatFrame.positionAttacker(list,2,1,false,swingConstant==SwingConstants.LEFT);
+							break;
+						case POS_DEFENDER_TARGET_DODGE_SMASH:
+							combatFrame.positionAttacker(list,3,2,false,swingConstant==SwingConstants.LEFT);
+							break;
+						case POS_DEFENDER_TARGET_DODGE_THRUST:
+							combatFrame.positionAttacker(list,1,2,false,swingConstant==SwingConstants.LEFT);
+							break;
+						case POS_DEFENDER_TARGET_DUCK_SWING:
+							combatFrame.positionAttacker(list,2,3,false,swingConstant==SwingConstants.LEFT);
+							break;
+						case POS_DEFENDER_TARGET_DUCK_THRUST:
+							combatFrame.positionAttacker(list,1,3,false,swingConstant==SwingConstants.LEFT);
+							break;
+					}
 					updateLayout();
 					repaint();
 				}
@@ -502,11 +773,15 @@ public class DenizenCombatSheet extends CombatSheet {
 		// Deploy
 		RealmComponentOptionChooser chooser = new RealmComponentOptionChooser(combatFrame,"Deploy to which target?",true);
 		
+		HostPrefWrapper hostPrefs = HostPrefWrapper.findHostPrefs(combatFrame.getActiveCharacter().getGameObject().getGameData());
 		// start with unassigned denizens
-		for (Iterator i=combatFrame.getUnassignedDenizens().iterator();i.hasNext();) {
-			RealmComponent denizen = (RealmComponent)i.next();
-			if (denizen.getTarget()==null && !denizen.isMistLike()) {
-				chooser.addRealmComponent(denizen);
+		for (Component denizenComponent : combatFrame.getUnassignedDenizens()) {
+			RealmComponent denizen = (RealmComponent)denizenComponent;
+			if (denizen.getTarget()==null && denizen.get2ndTarget()==null && (!denizen.isMistLike() || sheetOwner.getGameObject().hasThisAttribute(Constants.IGNORE_MIST_LIKE))) {
+				if(attackerIsFriendlyToDenizen(RealmComponent.getRealmComponent(combatFrame.getActiveCharacter().getGameObject()),denizen,hostPrefs)) continue;
+				if (!extendedTreachery(denizen) || combatFrame.getActiveCharacter().getTreacheryPreference()) {
+					chooser.addRealmComponent(denizen);
+				}
 			}
 		}
 		
@@ -516,33 +791,36 @@ public class DenizenCombatSheet extends CombatSheet {
 		if (sheetOwner.isPlayerControlledLeader()) {
 			sheetOwnerChar = new CharacterWrapper(sheetOwner.getGameObject());
 		}
-		ArrayList combatSheets = combatFrame.getAllCombatSheets();
-		for (Iterator i=combatSheets.iterator();i.hasNext();) {
-			CombatSheet sheet = (CombatSheet)i.next();
+		ArrayList<CombatSheet> combatSheets = combatFrame.getAllCombatSheets();
+		for (CombatSheet sheet : combatSheets) {
 			RealmComponent aSheetOwner = sheet.getSheetOwner();
 			RealmComponent aOwner = sheet.getSheetOwner().getOwner();
 			if (!owner.equals(aOwner)) {
 				if (!aSheetOwner.isHidden() || (sheetOwnerChar!=null && sheetOwnerChar.foundHiddenEnemy(aSheetOwner.getGameObject()))) {
-					chooser.addRealmComponent(aSheetOwner);
+					if(attackerIsFriendlyToDenizen(RealmComponent.getRealmComponent(combatFrame.getActiveCharacter().getGameObject()),aSheetOwner,hostPrefs)) continue;
+					if (!extendedTreachery(aSheetOwner) || combatFrame.getActiveCharacter().getTreacheryPreference()) {
+						chooser.addRealmComponent(aSheetOwner);
+					}
 				}
 			}
 		}
 		
 		// cycle through other sheet participants - identify sheet owner in each case with a small icon
-		for (Iterator i=combatSheets.iterator();i.hasNext();) {
-			CombatSheet sheet = (CombatSheet)i.next();
+		for (CombatSheet sheet : combatSheets) {
 			RealmComponent aSheetOwner = sheet.getSheetOwner();
-			for (Iterator n=sheet.getAllParticipantsOnSheet().iterator();n.hasNext();) {
-				RealmComponent participant = (RealmComponent)n.next();
+			for (RealmComponent participant : sheet.getAllParticipantsOnSheet()) {
 				if (participant!=null) {
 					RealmComponent participantOwner = participant.getOwner();
 					if (!owner.equals(participantOwner) && !aSheetOwner.equals(participant)) {
 						// Make sure the deploying native can "see" the participant
-						if (!participant.isMistLike()) {
+						if (!participant.isMistLike() || sheetOwner.getGameObject().hasThisAttribute(Constants.IGNORE_MIST_LIKE)) {
 							if (!participant.isHidden() || (sheetOwnerChar!=null && sheetOwnerChar.foundHiddenEnemy(participant.getGameObject()))) {
-								String option = chooser.generateOption();
-								chooser.addRealmComponentToOption(option,aSheetOwner,RealmComponentOptionChooser.DisplayOption.MediumIcon);
-								chooser.addRealmComponentToOption(option,participant);
+								if(attackerIsFriendlyToDenizen(RealmComponent.getRealmComponent(combatFrame.getActiveCharacter().getGameObject()),participant,hostPrefs)) continue;
+								if (!extendedTreachery(participant) || combatFrame.getActiveCharacter().getTreacheryPreference()) {
+									String option = chooser.generateOption();
+									chooser.addRealmComponentToOption(option,aSheetOwner,RealmComponentOptionChooser.DisplayOption.MediumIcon);
+									chooser.addRealmComponentToOption(option,participant);
+								}
 							}
 						}
 					}
@@ -565,7 +843,8 @@ public class DenizenCombatSheet extends CombatSheet {
 				if (monster.isPinningOpponent()) {
 					deployTargetKeepsTarget = true;
 					RealmComponent rc = monster.getTarget();
-					if (rc.isCharacter()) {
+					RealmComponent rc2 = monster.get2ndTarget();
+					if ((rc!=null && rc.isCharacter()) || (rc2!=null && rc2.isCharacter())) {
 						deployTargetMovesToNewSheet = false;
 					}
 				}
@@ -574,7 +853,7 @@ public class DenizenCombatSheet extends CombatSheet {
 			// Select side
 			if (combatFrame.selectDeploymentSide((ChitComponent)sheetOwner)) {
 				// Set the target, and leave sheet
-				if (deployTarget.getTarget()==null) {
+				if (deployTarget.getTarget()==null && deployTarget.get2ndTarget()==null) {
 					combatFrame.removeDenizen(deployTarget);
 				}
 				sheetOwner.setTarget(deployTarget);
@@ -584,11 +863,13 @@ public class DenizenCombatSheet extends CombatSheet {
 				
 				// If deploying to a character sheet, go into the unpositioned box
 				if (deployTarget.isCharacter()) {
-					sCombat.setCombatBox(0);
+					sCombat.setCombatBoxAttack(0);
+					sCombat.setCombatBoxDefense(0);
 					RealmComponent horse = (RealmComponent)sheetOwner.getHorse();
 					if (horse!=null) {
 						CombatWrapper hCombat = new CombatWrapper(horse.getGameObject());
-						hCombat.setCombatBox(0);
+						hCombat.setCombatBoxAttack(0);
+						hCombat.setCombatBoxDefense(0);
 					}
 				}
 				
@@ -608,6 +889,10 @@ public class DenizenCombatSheet extends CombatSheet {
 					deployTarget.setHidden(false);
 				}
 				
+				if (extendedTreachery(deployTarget)) {
+					BattleUtility.processTreachery(new CharacterWrapper(sheetOwner.getOwner().getGameObject()),deployTarget);
+				}
+				
 				// Make sure deployment causes natives to battle appropriately
 				if (deployTarget.isNative()) {
 					if (!combatFrame.getActiveCharacter().isBattling(deployTarget.getGameObject())) {
@@ -620,12 +905,20 @@ public class DenizenCombatSheet extends CombatSheet {
 					spell.expireSpell();
 					JOptionPane.showMessageDialog(this,spell.getName()+" was broken!");
 				}
+				CombatWrapper deployTargetCw = new CombatWrapper(deployTarget.getGameObject());
+				if (deployTargetCw.isPacified()) {
+					deployTargetCw.removePacified();
+				}
 				
 				// Refresh combat frame
 				combatFrame.refreshParticipants();
 				combatFrame.madeChange();
 			}
 		}
+	}
+	
+	private boolean extendedTreachery(RealmComponent denizen) {
+		return hostPrefs.hasPref(Constants.TE_EXTENDED_TREACHERY) && sheetOwner.isNative() && RealmUtility.getGroupName(denizen)!=null && RealmUtility.getGroupName(sheetOwner).matches(RealmUtility.getGroupName(denizen));
 	}
 	
 	public boolean hasUnpositionedDenizens() {
@@ -636,6 +929,10 @@ public class DenizenCombatSheet extends CombatSheet {
 		return usesMaxCombatBoxes(POS_ATTACKERS_BOX1);
 	}
 	
+	public boolean usesCombatBoxesEqually() {
+		return usesCombatBoxesEqually(POS_ATTACKERS_BOX1);
+	}
+	
 	public boolean needsTargetAssignment() {
 		return targetNeedsAssignment;
 	}
@@ -643,10 +940,41 @@ public class DenizenCombatSheet extends CombatSheet {
 	protected void drawRollers(Graphics g) {
 		if (redGroup!=null) drawRollerGroup(g,redGroup,POS_DEFENDER,POS_DEFENDER_BOX1);
 		if (circleGroup!=null) drawRollerGroup(g,circleGroup,POS_ATTACKERS,POS_ATTACKERS_BOX1);
-		if (squareGroup!=null) drawRollerGroup(g,squareGroup,POS_DEFENDER_TARGETS,POS_DEFENDER_TARGET_BOX1);
+		if (squareGroup!=null) drawRollerGroup(g,squareGroup,POS_DEFENDER_TARGETS,POS_DEFENDER_TARGET_BOX3);
 	}
 	protected void drawOther(Graphics g) {
 		// This implementation does nothing
+	}
+	
+	public static void lureDenizens(CombatFrame combatFrame, RealmComponent sheetOwner) {
+		int lureCount = combatFrame.selectedDenizenCount();
+		if (lureCount<=1) {
+			// Luring
+			combatFrame.lureDenizens(sheetOwner,1,1,false);
+		}
+		else if (lureCount>1) {
+			showDialogOnlySingleDenizenCanBeLured(combatFrame);
+		}
+	}
+	
+	public boolean canLureMoreDenizens() {
+		ArrayList<RealmComponent> c = layoutHash.getList(Integer.valueOf(DenizenCombatSheet.POS_ATTACKERS_BOX1));
+		return (c==null || c.size()==0)?true:false;
+	}
+	
+	public static void showDialogOnlySingleDenizenCanBeLured(CombatFrame combatFrame) {
+		JOptionPane.showMessageDialog(combatFrame,"A hireling can only lure one denizen","Invalid Lure",JOptionPane.WARNING_MESSAGE);
+	}
+	
+	// Only add the Flip action if not a "pinning" type Monster
+	public static boolean denizenCanFlip(RealmComponent sheetOwner) {
+		if (sheetOwner.isMonster()) {
+			MonsterChitComponent monster = (MonsterChitComponent)sheetOwner;
+			if (monster.canPinOpponent()) {
+				return false;
+			}
+		}
+		return true;
 	}
 	
 	/**
@@ -657,22 +985,22 @@ public class DenizenCombatSheet extends CombatSheet {
 		frame.getContentPane().setLayout(new BorderLayout());
 		DenizenCombatSheet sheet = new DenizenCombatSheet();
 		sheet.redGroup = new CombatSheet.RollerGroup();
-		sheet.redGroup.repositionRoller = sheet.makeRoller("2:4");
-		sheet.redGroup.changeTacticsRoller1 = sheet.makeRoller("2:4");
-		sheet.redGroup.changeTacticsRoller2 = sheet.makeRoller("2:4");
-		sheet.redGroup.changeTacticsRoller3 = sheet.makeRoller("2:4");
+		sheet.redGroup.repositionRoller = CombatSheet.makeRoller("2:4");
+		sheet.redGroup.changeTacticsRoller1 = CombatSheet.makeRoller("2:4");
+		sheet.redGroup.changeTacticsRoller2 = CombatSheet.makeRoller("2:4");
+		sheet.redGroup.changeTacticsRoller3 = CombatSheet.makeRoller("2:4");
 		sheet.circleGroup = new CombatSheet.RollerGroup();
-		sheet.circleGroup.repositionRoller = sheet.makeRoller("2:4");
-		sheet.circleGroup.changeTacticsRoller1 = sheet.makeRoller("2:4");
-		sheet.circleGroup.changeTacticsRoller2 = sheet.makeRoller("2:4");
-		sheet.circleGroup.changeTacticsRoller3 = sheet.makeRoller("2:4");
+		sheet.circleGroup.repositionRoller = CombatSheet.makeRoller("2:4");
+		sheet.circleGroup.changeTacticsRoller1 = CombatSheet.makeRoller("2:4");
+		sheet.circleGroup.changeTacticsRoller2 = CombatSheet.makeRoller("2:4");
+		sheet.circleGroup.changeTacticsRoller3 = CombatSheet.makeRoller("2:4");
 		sheet.squareGroup = new CombatSheet.RollerGroup();
-		sheet.squareGroup.repositionRoller = sheet.makeRoller("2:4");
-		sheet.squareGroup.changeTacticsRoller1 = sheet.makeRoller("2:4");
-		sheet.squareGroup.changeTacticsRoller2 = sheet.makeRoller("2:4");
-		sheet.squareGroup.changeTacticsRoller3 = sheet.makeRoller("2:4");
+		sheet.squareGroup.repositionRoller = CombatSheet.makeRoller("2:4");
+		sheet.squareGroup.changeTacticsRoller1 = CombatSheet.makeRoller("2:4");
+		sheet.squareGroup.changeTacticsRoller2 = CombatSheet.makeRoller("2:4");
+		sheet.squareGroup.changeTacticsRoller3 = CombatSheet.makeRoller("2:4");
 		for (int i=0;i<16;i++) {
-			sheet.hotspotHash.put(new Integer(i),"test");
+			sheet.hotspotHash.put(Integer.valueOf(i),"test");
 		}
 		frame.getContentPane().add(sheet,"Center");
 		frame.setSize(800,600);
