@@ -1,20 +1,3 @@
-/* 
- * RealmSpeak is the Java application for playing the board game Magic Realm.
- * Copyright (c) 2005-2015 Robin Warren
- * E-mail: robin@dewkid.com
- * 
- * This program is free software: you can redistribute it and/or modify it under the terms of the
- * GNU General Public License as published by the Free Software Foundation, either version 3 of the License,
- * or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
- * implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
- * for more details.
- * 
- * You should have received a copy of the GNU General Public License along with this program. If not, see
- *
- * http://www.gnu.org/licenses/
- */
 package com.robin.magic_realm.components;
 
 import java.util.*;
@@ -33,19 +16,19 @@ public class TileEditComponent extends TileComponent {
 		setAlwaysPaint(true);
 	}
 	
-	public Collection getClearingDetail() {
+	public Collection<ClearingDetail> getClearingDetail() {
 		return clearings[getFacingIndex()];
 	}
-	public void setClearingDetail(Collection c) {
-		clearings[getFacingIndex()] = new ArrayList(c);
+	public void setClearingDetail(Collection<ClearingDetail> c) {
+		clearings[getFacingIndex()] = new ArrayList<ClearingDetail>(c);
 		changed = true;
 		repaint();
 	}
-	public Collection getPathDetail() {
+	public Collection<PathDetail> getPathDetail() {
 		return paths[getFacingIndex()];
 	}
-	public void setPathDetail(Collection c) {
-		paths[getFacingIndex()] = new ArrayList(c);
+	public void setPathDetail(Collection<PathDetail> c) {
+		paths[getFacingIndex()] = new ArrayList<PathDetail>(c);
 		changed = true;
 		repaint();
 	}
@@ -63,28 +46,26 @@ public class TileEditComponent extends TileComponent {
 		String blockName = isEnchanted()?"enchanted":"normal";
 		
 		// First, rip out all clearing/path keys from the side
-		OrderedHashtable hash = gameObject.getAttributeBlock(blockName);
-		ArrayList keysToRemove = new ArrayList();
-		for (Enumeration e=hash.keys();e.hasMoreElements();) {
-			String key = (String)e.nextElement();
+		OrderedHashtable<String, Object> hash = gameObject.getAttributeBlock(blockName);
+		ArrayList<String> keysToRemove = new ArrayList<String>();
+		for (Enumeration<String> e=hash.keys();e.hasMoreElements();) {
+			String key = e.nextElement();
 			if (key.startsWith("path") || key.startsWith("clearing")) {
 				keysToRemove.add(key);
 			}
 		}
-		for (Iterator i=keysToRemove.iterator();i.hasNext();) {
-			String key = (String)i.next();
+		for (String key : keysToRemove) {
 			hash.remove(key);
 		}
 		
 		// Now add them back
-		for (Iterator i=clearings[getFacingIndex()].iterator();i.hasNext();) {
-			ClearingDetail detail = (ClearingDetail)i.next();
+		for (ClearingDetail detail : clearings[getFacingIndex()]) {
 			String baseKey = detail.toString();
 			gameObject.setAttribute(blockName,baseKey+"_type",detail.getType());
 			gameObject.setAttribute(blockName,baseKey+"_xy",encodePoint(detail.getPosition()));
 			
 			StringBuffer magic = new StringBuffer();
-			for (int m=ClearingDetail.MAGIC_WHITE;m<=ClearingDetail.MAGIC_BLACK;m++) {
+			for (int m=ClearingDetail.MAGIC_WHITE;m<=ClearingDetail.MAGIC_VARIED;m++) {
 				if (detail.getMagic(m)) {
 					magic.append(ClearingDetail.MAGIC_CHAR[m]);
 				}
@@ -95,8 +76,7 @@ public class TileEditComponent extends TileComponent {
 		}
 		
 		int n=1;
-		for (Iterator i=paths[getFacingIndex()].iterator();i.hasNext();) {
-			PathDetail detail = (PathDetail)i.next();
+		for (PathDetail detail : paths[getFacingIndex()]) {
 			String baseKey = "path_"+n;
 			gameObject.setAttribute(blockName,baseKey+"_from",detail.getFrom().toString());
 			gameObject.setAttribute(blockName,baseKey+"_to",detail.getTo().toString());
@@ -115,9 +95,9 @@ public class TileEditComponent extends TileComponent {
 	}
 	
 	protected String encodePoint(Point p) {
-		String px = new Double((p.x*100.0)/(double)TILE_WIDTH).toString()+". ";
+		String px = Double.valueOf((p.x*100.0)/TILE_WIDTH).toString()+". ";
 		px = px.substring(0,px.indexOf(".")+2);
-		String py = new Double((p.y*100.0)/(double)TILE_HEIGHT).toString()+". ";
+		String py = Double.valueOf((p.y*100.0)/TILE_HEIGHT).toString()+". ";
 		py = py.substring(0,py.indexOf(".")+2);
 		return px+","+py;
 	}
